@@ -55,6 +55,7 @@ edit_time_exact_time=Exact time
 settings_instructions=Settings
 settings_disabled=Settings (Requires Admin permissions)
 pin_instructions=Keep open
+no_visible_milestones=(Nothing to see here yet...)
 
 settings_title=Milestones settings
 settings_import_title=Import settings
