@@ -8,6 +8,7 @@ Date: ????
 
   Changes:
     - Infinite milestones marked as "hidden" will now only have the initial milestone hidden. Milestones created from the infinite milestone's completion will be visible.
+    - Added a small text to fill the space when no milestones are visible at all, to make it look more intentionally empty.
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.21
